<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StartActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_text_title"
        android:id="@+id/text_title"
        android:textSize="48dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_button_start"
        android:id="@+id/button_start"
        android:layout_marginBottom="25dp"
        android:layout_above="@+id/button_scores"
        android:layout_alignRight="@+id/img_start_mole"
        android:layout_alignEnd="@+id/img_start_mole"
        android:layout_alignLeft="@+id/img_start_mole"
        android:layout_alignStart="@+id/img_start_mole"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_button_scores"
        android:id="@+id/button_scores"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="26dp"
        android:layout_alignLeft="@+id/button_start"
        android:layout_alignStart="@+id/button_start"
        android:layout_alignRight="@+id/button_start"
        android:layout_alignEnd="@+id/button_start"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/img_start_mole"
        android:src="@drawable/placeholder_mole"
        android:layout_below="@+id/text_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"/>


</RelativeLayout>


